dist/LineScript-win64-20260616/tests/cases/compile_fail/mod_float.lsc
main() -> i64 do
  declare x = 5.5 % 2
  return 0
end
